--- a/_notebooks/2023-11-28-InternetLesson.ipynb
+++ b/_notebooks/2023-11-28-InternetLesson.ipynb
@@ -73,7 +73,9 @@
     "\n",
     "For example, if i want to send the message \"Hello\" to my brother on the same network, the frame will be sent within the network to the corresponding MAC address(Media Access Control) address, sometimes referred to as a hardware or physical address, is a unique, 12-character alphanumeric attribute that is used to identify individual electronic devices on a network.\n",
     "\n",
-    "Frames can only be sent on the same networ\n",
+    "Frames can only be sent on the same network\n",
+    "\n",
+    "A switch is a fundamental networking device that operates at the Data Link Layer (Layer 2) of the OSI model. Its primary function is to connect devices within the same local area network (LAN) and facilitate communication between them. Here's how switches work and why they are crucial in network setups:\n",
     "\n",
     "\n",
     "![Layer 2](https://www.howtonetwork.org/wp-content/uploads/2013/10/17.png)\n",
@@ -93,8 +95,8 @@
     "Packets are basically just frames, but with an IP address included in them\n",
     "\n",
     "\n",
-    "\n",
-    "![Layer 4](https://intronetworks.cs.luc.edu/1/html/_images/tcp_ladder_states.png)\n",
+    "**4. Transport Layer (Layer 4):**\n",
+    "<br>![Layer 4](https://intronetworks.cs.luc.edu/1/html/_images/tcp_ladder_states.png)\n",
     "![Layer 4](https://www.colocationamerica.com/wp-content/uploads/2018/12/udp-tcp.jpg) \n",
     "\n",
     "\n",
@@ -155,7 +157,6 @@
     "\n",
     "Routers - How frames are encapsulated into packets\n",
     "IPV4 Addresses/IPV6 Addresses - Unique Identifiers on Internet\n",
-    "DHCP - \n",
     "\n"
    ]
   },
@@ -202,7 +203,107 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Key Terms and definitions\n"
+    "### Multiple-Choice Questions (MCQs):\n",
+    "\n",
+    "1. **What does the Data Link Layer (Layer 2) focus on in a network?**\n",
+    "   - a. Logical addressing\n",
+    "   - b. Physical addressing\n",
+    "   - c. Network routing\n",
+    "   - d. Transport protocols\n",
+    "\n",
+    "2. **Which device operates at the Data Link Layer and uses MAC addresses for forwarding frames?**\n",
+    "   - a. Router\n",
+    "   - b. Hub\n",
+    "   - c. Switch\n",
+    "   - d. Repeater\n",
+    "\n",
+    "3. **In networking, what does a MAC address uniquely identify?**\n",
+    "   - a. Devices on the same network\n",
+    "   - b. Devices on different networks\n",
+    "   - c. IP addresses\n",
+    "   - d. Subnets\n",
+    "\n",
+    "4. **What is the main function of switches in a network?**\n",
+    "   - a. Logical addressing\n",
+    "   - b. Frame forwarding\n",
+    "   - c. IP addressing\n",
+    "   - d. Network routing\n",
+    "\n",
+    "5. **Which layer of the OSI model deals with physical transmission, like Ethernet and network adaptors?**\n",
+    "   - a. Network Layer (Layer 3)\n",
+    "   - b. Physical Layer (Layer 1)\n",
+    "   - c. Data Link Layer (Layer 2)\n",
+    "   - d. Transport Layer (Layer 4)\n",
+    "\n",
+    "6. **What does Layer 3 (Network Layer) use for unique device identification between different networks?**\n",
+    "   - a. IP addresses\n",
+    "   - b. MAC addresses\n",
+    "   - c. Port numbers\n",
+    "   - d. Subnet masks\n",
+    "\n",
+    "7. **Which protocol operates at Layer 4 and ensures reliable communication by acknowledging data receipt?**\n",
+    "   - a. UDP (User Datagram Protocol)\n",
+    "   - b. HTTP (Hypertext Transfer Protocol)\n",
+    "   - c. TCP (Transmission Control Protocol)\n",
+    "   - d. DNS (Domain Name System)\n",
+    "\n",
+    "8. **What is the main difference between UDP and TCP in Layer 4?**\n",
+    "   - a. TCP is faster but less reliable.\n",
+    "   - b. UDP is slower but more reliable.\n",
+    "   - c. TCP acknowledges data receipt, while UDP doesn't.\n",
+    "   - d. UDP is used for emails, and TCP for gaming.\n",
+    "\n",
+    "9. **In a network, what does the Transport Layer manage?**\n",
+    "   - a. Physical transmission\n",
+    "   - b. MAC addresses\n",
+    "   - c. Traffic flow between networks\n",
+    "   - d. Framing of data\n",
+    "\n",
+    "10. **Why would you choose UDP over TCP for a real-time application like online gaming?**\n",
+    "   - a. UDP is more reliable.\n",
+    "   - b. TCP is faster.\n",
+    "   - c. UDP provides faster communication.\n",
+    "   - d. TCP ensures every message is acknowledged.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**ANSWER KEY**\n",
+    "ƃuᴉssǝɹppɐ ʅɐɔᴉsʎɥԀ .q :ɹǝʍsu∀\n",
+    "ɥɔʇᴉʍS .ɔ :ɹǝʍsu∀\n",
+    "ʞɹoʍʇǝu ǝɯɐs ǝɥʇ uo sǝɔᴉʌǝᗡ .ɐ :ɹǝʍsu∀\n",
+    "ƃuᴉpɹɐʍɹoⅎ ǝɯɐɹᖵ .q :ɹǝʍsu∀\n",
+    "(⇂ ɹǝʎɐ⅂) ɹǝʎɐ⅂ ʅɐɔᴉsʎɥԀ .q :ɹǝʍsu∀\n",
+    "sǝssǝɹppɐ ԀI .ɐ :ɹǝʍsu∀\n",
+    "(ʅoɔoʇoɹԀ ʅoɹʇuoϽ uoᴉssᴉɯsuɐɹꓕ) ԀϽꓕ .ɔ :ɹǝʍsu∀\n",
+    ".ʇ╻usǝop ԀᗡՈ ǝʅᴉɥʍ ʻʇdᴉǝɔǝɹ ɐʇɐp sǝƃpǝʅʍouʞɔɐ ԀϽꓕ .ɔ :ɹǝʍsu∀\n",
+    "sʞɹoʍʇǝu uǝǝʍʇǝq ʍoʅⅎ ɔᴉⅎⅎɐɹꓕ .ɔ :ɹǝʍsu∀\n",
+    ".uoᴉʇɐɔᴉunɯɯoɔ ɹǝʇsɐⅎ sǝpᴉʌoɹd ԀᗡՈ .ɔ :ɹǝʍsu∀"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**HW: Answer all HW questions with a line of reasoning**\n",
+    "**WILL BE GRADED ON ACCURACY AND REASONING**\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   }
  ],
