Routing And Computing

--- a/_notebooks/2023-11-28-InternetLesson.ipynb
+++ b/_notebooks/2023-11-28-InternetLesson.ipynb
@@ -6,11 +6,12 @@
    "source": [
     "---\n",
     "toc: true\n",
-    "comments: true\n",
+    "comments: false\n",
     "layout: post\n",
-    "title: InternetLesson\n",
-    "type: tangibles\n",
-    "courses: {'csp': {'week': 15}}\n",
+    "title: 4.1 The Internet Basics\n",
+    "description: Team Teach on the Internet\n",
+    "type: tangibles \n",
+    "courses: { compsci: {week: 14} }\n",
     "---"
    ]
   },
