--- a/_notebooks/2023-11-29-Routing_and_Computing.ipynb
+++ b/_notebooks/2023-11-29-Routing_and_Computing.ipynb
@@ -140,7 +140,7 @@
     "\n",
     "The table below lists the amount of time it takes to execute each of the processes on a single computer. None of the processes are dependent on any of the others.\n",
     "\n",
-    "What is the minimum amount of time (approximate) to execute all three processes when the two processors are run in parallel?\n",
+    "What is the minimum amount of time (approximate) to execute all three processes when the two processors are run in parallel? - 50 seconds as the total time is usally the most time that a singular process takes. Z and Y run simulatanous that takes up 30 seconds in total and x takes up 20 more to a total of 50 seconds.\n",
     "\n",
     "\n",
     "| Process  | Execution Time on Either Processor |\n",
@@ -282,17 +282,30 @@
     "\n",
     "### <font color = \"FFC0CB\"> Popcorn Hack Answer </font>\n",
     "\n",
-    "[blank] seconds\n",
+    "[50] seconds<br>\n",
+    "50 seconds as the total time is usally the most time that a singular process takes. Z and Y run simulatanous that takes up 30 seconds in total and x takes up 20 more to a total of 50 seconds.\n",
     "\n",
     "### <font color = \"FFC0CB\"> MC Hacks Answers </font>\n",
     "\n",
     "Simply put A, B, C, or D next to each number to indicate the correct answers for the questions above. \n",
     "\n",
-    "1. \n",
-    "2. \n",
-    "3. \n",
-    "4. "
+    "1. C\n",
+    "2. A\n",
+    "3. B\n",
+    "4. D"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
