--- a/_notebooks/2023-12-05-Benefitial_and_Harmful.ipynb
+++ b/_notebooks/2023-12-05-Benefitial_and_Harmful.ipynb
@@ -213,7 +213,8 @@
    "metadata": {},
    "source": [
     "TaskMate - Simple Task Manager\n",
-    "this is a simple task manager which helps stay organized and up to date with all the tasks at hand and also enables effective communication among peers.\n",
+    "this is a simple task manager which helps stay organized and up to date with all the tasks at hand and also enables effective communication \n",
+    "among peers. This task manager will have features that help one stay organize in life with daily calnder and reminders on time that enable one to be one time with any task at hand. One can also customize how they'd like their task manager to be with new feature updates every week. But a few drawback include that of relying too much on the task manager which could lead to procrastination and over dependence.\n",
     "\n",
     "Benefits:\n",
     "- Stay Organized: this program helps keep each of you works and programs oraganized and in one place making it easy to access \n",
