--- a/_notebooks/2023-12-7-DigitalDivide.ipynb
+++ b/_notebooks/2023-12-7-DigitalDivide.ipynb
@@ -193,7 +193,7 @@
     "\n",
     "## <font color = \"ADD8E6\"> YOUR answer </font>\n",
     "\n",
-    "Answer:"
+    "Answer: I would fundraise in my community for money affords computers and accerssories for the people, and probably set up like a walk in tech center which would help reduce the digital divide"
    ]
   },
   {
@@ -397,16 +397,16 @@
     "\n",
     "Answer questions below with solely the letter name! Make sure to have your <mark>popcorn hack</mark> completed as well.\n",
     "\n",
-    "    - [] Question 1 \n",
-    "    - [] Question 2\n",
-    "    - [] Question 3\n",
-    "    - [] Question 4\n",
-    "    - [] Question 5\n",
-    "    - [] Question 6\n",
-    "    - [] Question 7\n",
-    "    - [] Question 8\n",
-    "    - [] Question 9\n",
-    "    - [] Question 10\n",
+    "    - [C] Question 1 \n",
+    "    - [D] Question 2\n",
+    "    - [B] Question 3\n",
+    "    - [A] Question 4\n",
+    "    - [A] Question 5\n",
+    "    - [A] Question 6\n",
+    "    - [A] Question 7\n",
+    "    - [A] Question 8\n",
+    "    - [C] Question 9\n",
+    "    - [D] Question 10\n",
     "\n"
    ]
   }
