--- a/_notebooks/2023-12-14-ethics-team-teach.ipynb
+++ b/_notebooks/2023-12-14-ethics-team-teach.ipynb
@@ -70,7 +70,8 @@
    "source": [
     "## <font color = \"FFC0C9\"> Popcorn Hack 1 </font> \n",
     "\n",
-    "- Give an example of an open source software and explain why it is an open source. "
+    "- Give an example of an open source software and explain why it is an open source. <br>\n",
+    "An example of open source software is Linux. It's open source because its source code is freely available, promoting collaboration, customization, and continuous improvement by a community of developers."
    ]
   },
   {
@@ -96,8 +97,14 @@
    "source": [
     "## <font color = \"FFC0C9\"> Popcorn Hack 2 </font> \n",
     "\n",
-    "- What is another legal or ethical concern regarding intellectual property in technology?"
+    "- What is another legal or ethical concern regarding intellectual property in technology?<br>\n",
+    "Patent trolling is a concern in technology, involving the exploitation of patents for profit without contributing to innovation, creating legal challenges for genuine creators."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -107,15 +114,16 @@
     "\n",
     "Complete these five free response questions and send them to Taj on slack by December 21, 11:59 pm. You will be graded on how much effort you put into your answer. \n",
     "\n",
-    "1. What is the difference between open source and open access? \n",
-    "\n",
-    "2. What is the importance of copyright?\n",
-    "\n",
-    "3. What is a way people can harm individuals or groups through open source data? \n",
-    "\n",
-    "4. What term describes the uequal distribution of access to technology? \n",
-    "\n",
-    "5. How do you see intellectual property in 20 years (be creative)?"
+    "1. What is the difference between open source and open access? <br>\n",
+    "Open source relates to accessible and modifiable software code, while open access pertains to unrestricted access to scholarly content.<br>\n",
+    "2. What is the importance of copyright?<br>\n",
+    "Copyright is vital for protecting creators, fostering innovation, and ensuring fair compensation for their work.<br>\n",
+    "3. What is a way people can harm individuals or groups through open source data? <br>\n",
+    "Exploiting vulnerabilities in open source data can lead to privacy breaches, identity theft, and misuse of personal information.<br>\n",
+    "4. What term describes the uequal distribution of access to technology? <br>\n",
+    "digital divide is another term that describes the uequl distribution to accesss for technology.<br>\n",
+    "5. How do you see intellectual property in 20 years (be creative)?<br>\n",
+    "In 20 years, intellectual property may shift to collaborative frameworks the use of Ai would increase which may casue many jobs to be shifted towards that of AI.\n"
    ]
   }
  ],
