--- a/_notebooks/2023-12-6-TeamTeach.ipynb
+++ b/_notebooks/2023-12-6-TeamTeach.ipynb
@@ -109,6 +109,7 @@
    "source": [
     "## POPCORN HACK, Create your own undecidable problem\n",
     "    Create a problem that is unsolvable by any single algorithim, for example, this problem could have infinite possibilities\n",
+    "    Color an infinite graph where each node represents a unique point in continuous space. The catch: no connected nodes can share the same color. The challenge lies in the infinite possibilities and the intricate, uncomputable connections between nodes, making it unsolvable by any single algorithm.\n",
     "\n",
     "### Example \n",
     "#### The \"Infinite Sum Sequence Problem (ISSP)\"\n",
@@ -131,7 +132,9 @@
     "\n",
     "B) It deals with finding the shortest path in a graph.\n",
     "\n",
-    "C) PCP revolves around identifying whether a set of strings can be matched in a specific sequence.\n",
+    "<mark>C) PCP revolves around identifying whether a set of strings can be matched in a specific sequence.</mark>\n",
+    "\n",
+    "PCP revolves aorunf identifying whether a set of stings can be matched into a particular specfic sequemce, posing a crucial question to computability theory.\n",
     "\n",
     "D) It's related to optimizing sorting algorithms.\n",
     "\n",
@@ -143,7 +146,9 @@
     "\n",
     "B) There exists an algorithm that can determine if a given shape can be tiled with a specific set of smaller shapes.\n",
     "\n",
-    "C) It's impossible to ascertain if an arbitrary shape can be tiled using a finite set of smaller shapes.\n",
+    "<mark>C) It's impossible to ascertain if an arbitrary shape can be tiled using a finite set of smaller shapes.</mark>\n",
+    "\n",
+    "Tiling problems lies in the impossible nature of a given shape to be tilled into a specifc set of smaller shapes, this presents a limit to algorithmic soultions\n",
     "\n",
     "D) Tiling Problems can only be solved for regular polygons.\n",
     "\n",
@@ -154,7 +159,9 @@
     "\n",
     "A) It focuses on finding the most efficient algorithm for text processing in groups.\n",
     "\n",
-    "B) This problem pertains to determining if two words representing group elements are equivalent.\n",
+    "<mark>B) This problem pertains to determining if two words representing group elements are equivalent.</mark>\n",
+    "\n",
+    "The main issue of the word problem for groups is determining if two workds representing group elements are equivalent which thereby adresses a key question in \"group theory\".\n",
     "\n",
     "C) The Word Problem for Groups refers to solving crossword puzzles collaboratively.\n",
     "\n",
@@ -169,7 +176,8 @@
     "\n",
     "B) Busy Beaver Problem revolves around finding the most efficient algorithm to sort a list of numbers.\n",
     "\n",
-    "C) It's about determining the longest-running and most productive Turing machine.\n",
+    "<mark>C) It's about determining the longest-running and most productive Turing machine.</mark>\n",
+    "This problem is about determining the longed running time which is also the most productive of a turing machine, this showcases the challenges in optimizin comp efficiency.\n",
     "\n",
     "D) Busy Beaver Problem is concerned with scheduling tasks in a time-efficient manner.\n",
     "\n",
@@ -182,7 +190,9 @@
     "\n",
     "B) The conjecture revolves around finding the optimal path in a graph.\n",
     "\n",
-    "C) Collatz Conjecture deals with iterating over integers using a specific sequence until reaching the value 1.\n",
+    "<mark>C) Collatz Conjecture deals with iterating over integers using a specific sequence until reaching the value 1.</mark>\n",
+    "\n",
+    "The collaztz conjecture focuses on iteration over interger using a specific sequence unitl reaching the value of 1. there by c would be correct.\n",
     "\n",
     "D) It's a hypothesis about the behavior of sorting algorithms.\n",
     "\n",
@@ -195,7 +205,9 @@
     "\n",
     "B) Knapsack Problem.\n",
     "\n",
-    "C) Post's Correspondence Problem.\n",
+    "<mark>C) Post's Correspondence Problem.</mark>\n",
+    "\n",
+    "This problem involves matching pairs of stings in a way that no two sequences roduce identival combined\n",
     "\n",
     "D) Dijkstra's Shortest Path Problem.\n",
     "\n",
@@ -206,7 +218,8 @@
     "\n",
     "A) It claims that all programming languages are Turing-complete.\n",
     "\n",
-    "B) Rice's Theorem affirms that any non-trivial property about the behavior of programs is undecidable.\n",
+    "<mark>B) Rice's Theorem affirms that any non-trivial property about the behavior of programs is undecidable.</mark>\n",
+    "The rice theorem states that it is undecidable to determine any non-trivial property of the behavious of programs. In other words there is no algorithm that can decide whether they exhibit a certain non trivial property.\n",
     "\n",
     "C) It asserts that all recursive functions can be computed using a Turing machine.\n",
     "\n",
@@ -217,7 +230,8 @@
     "### Emptiness Problem for Turing Machines\n",
     "What does the Emptiness Problem for Turing Machines aim to determine?\n",
     "\n",
-    "A) It checks whether a Turing machine can recognize an empty language.\n",
+    "<mark>A) It checks whether a Turing machine can recognize an empty language.</mark>\n",
+    "This problem aims to detemine whether a given turing machine when processing a specific input recognizes an anpty language menaing it does not accpet any strings.\n",
     "\n",
     "B) This problem is concerned with finding the smallest Turing machine.\n",
     "\n",
@@ -234,7 +248,8 @@
     "\n",
     "B) Riemann Hypothesis.\n",
     "\n",
-    "C) The Entscheidungsproblem.\n",
+    "<mark>C) The Entscheidungsproblem.</mark>\n",
+    "This problems that was famosly formulated by David HIlbert aimed to sought a general method to determine the provability or disprovability of mathematical propositions. In other words a procedure to deicde the truth of a mathematical statistic.\n",
     "\n",
     "D) Goldbach's Conjecture.\n"
    ]
