--- a/_notebooks/2023-12-12-ComputerBias.ipynb
+++ b/_notebooks/2023-12-12-ComputerBias.ipynb
@@ -48,7 +48,14 @@
     "## <font color = \"ADD8E6\">Popcorn Hack 1</font>\n",
     "Name a software app you know about and name some explicit and some implicit data that they collect from you the user.\n",
     "\n",
-    "Answer:"
+    "Answer: Google Chrome<br>\n",
+    "<br>\n",
+    "<mark>Explicit</mark>\n",
+    "Search queries and bookmarks\n",
+    "\n",
+    "<br>\n",
+    "<mark>Implicit</mark>\n",
+    "Browsing history, add ons, extensions"
    ]
   },
   {
@@ -83,7 +90,7 @@
     "## <font color = \"ADD8E6\">Popcorn Hack 2</font>\n",
     "Give an example of a movie, show, or video game or even a certain softare that has a certain bias and what who the bias is towards\n",
     "\n",
-    "Answer:"
+    "Answer: Marvel movies, those who like comics and superhero movies etc "
    ]
   },
   {
@@ -118,11 +125,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Homework Hacks:\n",
-    "The implementation of a predictive policing algorithm in a city has raised concerns regarding potential biases,leading to disporotionate targeting of specific neighborhoods. This over-policing could result in civil rights violation. Your task is to propose a solution to mitigate this bias and explain the method you'd use to remove computing bias. Make a full paragraph that is at least 4 sentences"
+    "The implementation of a predictive policing algorithm in a city has raised concerns regarding potential biases,leading to disporotionate targeting of specific neighborhoods. This over-policing could result in civil rights violation. Your task is to propose a solution to mitigate this bias and explain the method you'd use to remove computing bias. Make a full paragraph that is at least 4 sentences\n",
+    "\n",
+    "\n",
+    "<mark>Paragraph</mark>\n",
+    "\n",
+    "To address bias in an algorith, it's crucial to start by using accurate data that represents all the people within the community. This ensures that no one person is every favoed in the environment, this also enables all the people to be treated equally. Next, the algorithm can be looked into to treat all areas equally, it can be tweked to include all to adjust over-policing in certain regions. And also with implementation of continuouts feedback loops involving represenation for m various communities  helps maintain equalitiy with ongoing imporvements. Regural reviews and collaboration with the society's leaders also helps clear out biased outcomes.\n",
+    "\n",
+    "\n"
    ]
   }
  ],
