--- a/_notebooks/2023-12-12-ComputerBias.ipynb
+++ b/_notebooks/2023-12-12-ComputerBias.ipynb
@@ -8,9 +8,9 @@
     "toc: true\n",
     "comments: true\n",
     "layout: post\n",
-    "title: Computing Bias\n",
+    "title: 4.8 Computing Bias\n",
     "courses: { compsci: {week: 16} }\n",
-    "type: hacks\n",
+    "type: tangibles\n",
     "---"
    ]
   },
