--- a/_notebooks/2023-12-21-Test_Corrections.ipynb
+++ b/_notebooks/2023-12-21-Test_Corrections.ipynb
@@ -10,7 +10,7 @@
     "layout: post\n",
     "title: Test Corrections\n",
     "description: \n",
-    "type: tangibles \n",
+    "type: hacks \n",
     "courses: { compsci: {week: 17} }\n",
     "---"
    ]
