--- a/_notebooks/2023-12-21-Safe_Computing_5.6.ipynb
+++ b/_notebooks/2023-12-21-Safe_Computing_5.6.ipynb
@@ -8,7 +8,7 @@
     "toc: true\n",
     "comments: false\n",
     "layout: post\n",
-    "title: 4.9 Safe Computing\n",
+    "title: 4.10 Safe Computing\n",
     "description: \n",
     "type: tangibles \n",
     "courses: { compsci: {week: 17} }\n",
@@ -141,9 +141,9 @@
     "\n",
     "List at least three apps or websites that might use PII:\n",
     "\n",
-    "- 1: \n",
-    "- 2: \n",
-    "- 3: "
+    "- 1: FAcebook \n",
+    "- 2: Google\n",
+    "- 3: Amazon"
    ]
   },
   {
@@ -253,6 +253,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'cryptography'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mcryptography\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mfernet\u001b[39;00m \u001b[39mimport\u001b[39;00m Fernet\n\u001b[1;32m      3\u001b[0m \u001b[39m# Generate a key for symmetric encryption\u001b[39;00m\n\u001b[1;32m      4\u001b[0m key \u001b[39m=\u001b[39m Fernet\u001b[39m.\u001b[39mgenerate_key()\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'cryptography'"
+     ]
+    }
+   ],
+   "source": [
+    "from cryptography.fernet import Fernet\n",
+    "key = Fernet.generate_key()\n",
+    "cipher_suite = Fernet(key)\n",
+    "message = \"Hello, this is a secret message!\"\n",
+    "cipher_text = cipher_suite.encrypt(message.encode())\n",
+    "decrypted_message = cipher_suite.decrypt(cipher_text)\n",
+    "print(f\"Original Message: {message}\")\n",
+    "print(f\"Encrypted Message: {cipher_text}\")\n",
+    "print(f\"Decrypted Message: {decrypted_message.decode()}\")\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -299,7 +328,10 @@
    "source": [
     "### <font color = \"Green\">Popcorn Hack 3:</font>\n",
     "\n",
-    "Go to a website that checks your password and make a strong password."
+    "Go to a website that checks your password and make a strong password.\n",
+    "\n",
+    "z&G8$wP#2rL6@uT\n",
+    "\n"
    ]
   },
   {
@@ -337,8 +369,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.6"
   },
   "orig_nbformat": 4
  },
