--- a/_posts/2024-1-15-Week_19_Plans.md
+++ b/_posts/2024-1-15-Week_19_Plans.md
@@ -6,6 +6,7 @@ title: Week 19 Plans
 description: These are the plans for week 19 with uses the utterence bot
 type: plans
 courses: { compsci: {week: 19} }
+image: images/plan-dice-760.jpg
 ---
 
 
