all commits for changes

--- a/_posts/2023-08-28-Week_2_Plans2.md
+++ b/_posts/2023-08-28-Week_2_Plans2.md
@@ -6,6 +6,7 @@ title: Week 2 Plans
 description: These are the plans for week 2
 type: plans
 courses: { compsci: {week: 2} }
+image: images/plan-dice-760.jpg
 ---
 
 #### Monday
