--- a/_posts/2023-09-11-Week_4_plans.md
+++ b/_posts/2023-09-11-Week_4_plans.md
@@ -6,6 +6,7 @@ title: Week 4 Plans
 description: These are the plans for week 4 with uses the utterence bot
 type: plans
 courses: { compsci: {week: 4} }
+image: images/plan-dice-760.jpg
 ---
 
 
