--- a/_posts/2023-10-01-Week_7_Plans.md
+++ b/_posts/2023-10-01-Week_7_Plans.md
@@ -6,6 +6,7 @@ title: Week 7 Plans
 description: These are the plans for week 7 with uses the utterence bot
 type: plans
 courses: { compsci: {week: 7} }
+image: images/plan-dice-760.jpg
 ---
 
 
