--- a/_posts/2023-10-30-Week_11_Plans.md
+++ b/_posts/2023-10-30-Week_11_Plans.md
@@ -6,6 +6,7 @@ title: Week 11 Plans
 description: These are the plans for week 11 with uses the utterence bot
 type: plans
 courses: { compsci: {week: 11} }
+image: images/plan-dice-760.jpg
 ---
 
 
