--- a/_posts/2023-11-13-Week_13_Plans.md
+++ b/_posts/2023-11-13-Week_13_Plans.md
@@ -6,6 +6,7 @@ title: Week 13 Plans
 description: These are the plans for week 13 with uses the utterence bot
 type: plans
 courses: { compsci: {week: 13} }
+image: images/plan-dice-760.jpg
 ---
 
 
