--- a/_posts/2023-12-9-Week_16_PLans.md
+++ b/_posts/2023-12-9-Week_16_PLans.md
@@ -6,6 +6,7 @@ title: Week 16 Plans
 description: These are the plans for week 16 with uses the utterence bot
 type: plans
 courses: { compsci: {week: 16} }
+image: images/plan-dice-760.jpg
 ---
 
 
