--- a/_posts/2023-09-01-Week_3_Plans.md
+++ b/_posts/2023-09-01-Week_3_Plans.md
@@ -6,6 +6,7 @@ title: Week 3 Plans
 description: These are the plans for week 3 with uses the utterence bot
 type: plans
 courses: { compsci: {week: 3} }
+image: images/plan-dice-760.jpg
 ---
 
 
