--- a/_posts/2023-09-24-Week_6_Plans.md
+++ b/_posts/2023-09-24-Week_6_Plans.md
@@ -6,6 +6,7 @@ title: Week 6 Plans
 description: These are the plans for week 6 with uses the utterence bot
 type: plans
 courses: { compsci: {week: 6} }
+image: images/plan-dice-760.jpg
 ---
 
 
