--- a/_posts/2023-10-09-Week_8_Plans.md
+++ b/_posts/2023-10-09-Week_8_Plans.md
@@ -6,6 +6,7 @@ title: Week 8 Plans
 description: These are the plans for week 8 with uses the utterence bot
 type: plans
 courses: { compsci: {week: 8} }
+image: images/plan-dice-760.jpg
 ---
 
 
