--- a/_posts/2023-10-16-Week_9_Plans.md
+++ b/_posts/2023-10-16-Week_9_Plans.md
@@ -6,6 +6,7 @@ title: Week 9 Plans
 description: These are the plans for week 8 with uses the utterence bot
 type: plans
 courses: { compsci: {week: 9} }
+image: images/plan-dice-760.jpg
 ---
 
 
