--- a/_posts/2023-10-23-Week_10_Plans.md
+++ b/_posts/2023-10-23-Week_10_Plans.md
@@ -6,6 +6,7 @@ title: Week 10 Plans
 description: These are the plans for week 10 with uses the utterence bot
 type: plans
 courses: { compsci: {week: 10} }
+image: images/plan-dice-760.jpg
 ---
 
 
