--- a/_posts/2023-12-4-Week_15_Plans.md
+++ b/_posts/2023-12-4-Week_15_Plans.md
@@ -6,6 +6,7 @@ title: Week 15 Plans
 description: These are the plans for week 15 with uses the utterence bot
 type: plans
 courses: { compsci: {week: 15} }
+image: images/plan-dice-760.jpg
 ---
 
 
