--- a/_notebooks/2023-12-21-Safe_Computing_5.6.ipynb
+++ b/_notebooks/2023-12-21-Safe_Computing_5.6.ipynb
@@ -12,6 +12,7 @@
     "description: \n",
     "type: tangibles \n",
     "courses: { compsci: {week: 17} }\n",
+    "image: images/dsf.jpeg\n",
     "---"
    ]
   },
