--- a/_notebooks/2023-12-12-ComputerBias.ipynb
+++ b/_notebooks/2023-12-12-ComputerBias.ipynb
@@ -11,6 +11,7 @@
     "title: 4.8 Computing Bias\n",
     "courses: { compsci: {week: 16} }\n",
     "type: tangibles\n",
+    "image: images/sd.jpeg\n",
     "---"
    ]
   },
