--- a/_notebooks/2024-1-15-SASS_Student_Lesson.ipynb
+++ b/_notebooks/2024-1-15-SASS_Student_Lesson.ipynb
@@ -12,6 +12,7 @@
     "description: SASS Student Lesson\n",
     "type: tangibles \n",
     "courses: { compsci: {week: 19} }\n",
+    "image: images/1024px-Sass_Logo_Color.svg.png\n",
     "---"
    ]
   },
