--- a/_notebooks/2024-1-11-CPT_Ideation.ipynb
+++ b/_notebooks/2024-1-11-CPT_Ideation.ipynb
@@ -12,6 +12,7 @@
     "description: \n",
     "type: hacks \n",
     "courses: { compsci: {week: 18} }\n",
+    "image: images/ideation-process-vancouver-calgary-1024x508.jpg\n",
     "---"
    ]
   },
