--- a/_notebooks/2023-12-21-Test_Corrections.ipynb
+++ b/_notebooks/2023-12-21-Test_Corrections.ipynb
@@ -12,6 +12,7 @@
     "description: \n",
     "type: hacks \n",
     "courses: { compsci: {week: 17} }\n",
+    "images: images/hr.jpg\n",
     "---"
    ]
   },
