--- a/_notebooks/2023-11-13-Ideation.ipynb
+++ b/_notebooks/2023-11-13-Ideation.ipynb
@@ -12,6 +12,7 @@
     "description: Ideation plans and presentaiton for Binary Blackjack game\n",
     "type: tangibles \n",
     "courses: { compsci: {week: 13} }\n",
+    "image: images/ideation-process-vancouver-calgary-1024x508.jpg\n",
     "---"
    ]
   },
