--- a/_notebooks/2023-11-28-InternetLesson.ipynb
+++ b/_notebooks/2023-11-28-InternetLesson.ipynb
@@ -12,6 +12,7 @@
     "description: Team Teach on the Internet\n",
     "type: tangibles \n",
     "courses: { compsci: {week: 14} }\n",
+    "image: images/djkfgh.jpg\n",
     "---"
    ]
   },
