--- a/_notebooks/2023-11-29-Routing_and_Computing.ipynb
+++ b/_notebooks/2023-11-29-Routing_and_Computing.ipynb
@@ -12,6 +12,7 @@
     "description: Team teach on routing and computing\n",
     "type: tangibles \n",
     "courses: { compsci: {week: 14} }\n",
+    "image: images/hh.png\n",
     "---"
    ]
   },
