--- a/_notebooks/2023-12-04-Crowdsourcing_teamteach.ipynb
+++ b/_notebooks/2023-12-04-Crowdsourcing_teamteach.ipynb
@@ -12,6 +12,7 @@
     "description: This is the team teach for crowdsourcing.\n",
     "type: tangibles\n",
     "courses: { compsci: {week: 16} }\n",
+    "image: images/drhj.jpeg\n",
     "---"
    ]
   },
