--- a/_notebooks/2023-12-05-Benefitial_and_Harmful.ipynb
+++ b/_notebooks/2023-12-05-Benefitial_and_Harmful.ipynb
@@ -12,6 +12,7 @@
     "description: Team teach on routing and computing\n",
     "type: tangibles \n",
     "courses: { compsci: {week: 15} }\n",
+    "image: images/download.jpeg\n",
     "---"
    ]
   },
