--- a/_notebooks/2023-12-14-ethics-team-teach.ipynb
+++ b/_notebooks/2023-12-14-ethics-team-teach.ipynb
@@ -11,6 +11,7 @@
     "title: 4.9 Legal and Ethical Concerns\n",
     "courses: { compsci: {week: 17} }\n",
     "type: tangibles\n",
+    "image: images/dfhjbfdbhj.jpeg\n",
     "---"
    ]
   },
