--- a/_notebooks/2023-12-6-TeamTeach.ipynb
+++ b/_notebooks/2023-12-6-TeamTeach.ipynb
@@ -12,6 +12,7 @@
     "description: \n",
     "type: tangibles \n",
     "courses: { compsci: {week: 16} }\n",
+    "image: images/h.png\n",
     "---"
    ]
   },
