--- a/_notebooks/2023-12-7-DigitalDivide.ipynb
+++ b/_notebooks/2023-12-7-DigitalDivide.ipynb
@@ -12,6 +12,7 @@
     "description: \n",
     "type: tangibles \n",
     "courses: { compsci: {week: 15} }\n",
+    "image: images/QY6J6C7ETNAMHNOK6UWPFERKZI.jpg\n",
     "---"
    ]
   },
