--- a/_notebooks/2023-10-29-CSP_Practice_Test_Corrections.ipynb
+++ b/_notebooks/2023-10-29-CSP_Practice_Test_Corrections.ipynb
@@ -12,6 +12,7 @@
     "description: Practice test corrections\n",
     "type: tangibles \n",
     "courses: { compsci: {week: 11} }\n",
+    "images: images/hr.jpg\n",
     "---"
    ]
   },
