--- a/_notebooks/2024-1-15-SASS_Student_Lesson.ipynb
+++ b/_notebooks/2024-1-15-SASS_Student_Lesson.ipynb
@@ -483,12 +483,199 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "html"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "// Example of a complete SASS Code from CSS of Previous CPT Project\n",
+    "\n",
+    "$main-bg-color: #8ec1da;\n",
+    "$card-bg-color: rgba(128, 128, 128, 0.5);\n",
+    "$button-bg-color: rgba(38, 152, 255, 0.5);\n",
+    "$button-hover-bg-color: rgba(38, 152, 255, 0.3) !important;\n",
+    "$font-family: Verdana, sans-serif;\n",
+    "$button-size: 10%;\n",
+    "$box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);\n",
+    "\n",
+    "body {\n",
+    "  width: 100%;\n",
+    "  height: 100%;\n",
+    "  margin: 0em 0%;\n",
+    "  background-color: $main-bg-color;\n",
+    "  background-image: url(\"https://static.vecteezy.com/system/resources/previews/016/124/733/non_2x/poker-and-casino-playing-card-black-background-vector.jpg\");\n",
+    "  background-position: center bottom;\n",
+    "}\n",
+    "\n",
+    ".title, .playercardsbox, .dealercardsbox, .result, .hitbutton, .standbutton, .resetbutton, .playersumbox, .dealersumbox {\n",
+    "  position: fixed;\n",
+    "  transform: translate(-50%, -50%);\n",
+    "  font-family: $font-family;\n",
+    "}\n",
+    "\n",
+    ".playercardsbox, .dealercardsbox, .playersumbox, .dealersumbox {\n",
+    "  background-color: $card-bg-color;\n",
+    "  padding: 20px;\n",
+    "  border-radius: 10px;\n",
+    "  box-shadow: $box-shadow;\n",
+    "  font-size: 30px;\n",
+    "}\n",
+    "\n",
+    ".result {\n",
+    "  top: 34%;\n",
+    "  font-size: 150px;\n",
+    "  color: red;\n",
+    "  display: none;\n",
+    "}\n",
+    "\n",
+    ".hitbutton, .standbutton, .resetbutton {\n",
+    "  left: 50%;\n",
+    "  background-color: $button-bg-color;\n",
+    "  border: none;\n",
+    "  width: $button-size;\n",
+    "  height: $button-size;\n",
+    "  border-radius: 10px;\n",
+    "  font-size: 30px;\n",
+    "}\n",
+    "\n",
+    ".hitbutton:hover, .standbutton:hover, .resetbutton:hover {\n",
+    "  background-color: $button-hover-bg-color;\n",
+    "}\n",
+    "\n",
+    ".standbutton { top: 72%; }\n",
+    ".hitbutton { top: 60%; }\n",
+    ".resetbutton { top: 84%; display: block; }"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <font color = \"Green\">Homework</font> \n",
+    "<h3>How does HTML code use SASS??</h3>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In HTML, you don't directly use Sass; instead, you use the compiled CSS generated from Sass. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h4>Steps to use predefined SASS</h4>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Intall SASS: Before you use SASS you need to install it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "html"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "npm install -g sass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. Create SASS file: write you SASS file code and be sure to give it the extension of \".scss\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "html"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "// Example sass\n",
     "\n",
-    "1. Write a simple SASS code that creates a custom function and calcualtes the area of a circle. Remember to use the @return function.\n",
+    "$primary-color: #3498db;\n",
+    "\n",
+    "body {\n",
+    "  background-color: $primary-color;\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. Compile SASS into CSS: Use installed SASS compiled to convert the .scss file into a .css file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "html"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "sass input.scss output.css"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4. Linked compiled CSS into the HTML/JS project code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "html"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "<html>\n",
+    "<head>\n",
+    "  <!--Meta data here -->\n",
+    "\n",
+    "  <link rel=\"stylesheet\" href=\"output.css\">\n",
+    "\n",
+    "  <title>Project Page</title>\n",
+    "</head>\n",
+    "<body>\n",
+    " <!--HTML stuff-->\n",
+    "</body>\n",
+    "</html>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### <font color = \"Green\">Extra Credit Opportunity</font> \n",
+    "\n",
+    "1. Using the steps above, create am SCSS file with SASS code for a simple button, convert the file to a .css and link it into a new HTML file. The final output needs to be a button with a color of your choice.\n",
     "\n",
     "<mark>// Your code here</mark>"
    ]
@@ -497,7 +684,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Send the 3 popcorn hacks and the homework question to Sri Vaidyanthan S by ________"
+    "Send the 3 popcorn hacks and the extra credit question to Sri Vaidyanthan S by this Friday"
    ]
   }
  ],
