--- a/_posts/2023-11-8-Week_12_Plans.md
+++ b/_posts/2023-11-8-Week_12_Plans.md
@@ -6,6 +6,7 @@ title: Week 12 Plans
 description: These are the plans for week 12 with uses the utterence bot
 type: plans
 courses: { compsci: {week: 12} }
+image: images/plan-dice-760.jpg
 ---
 
 
