--- a/_notebooks/2023-10-29-Student_Blog_Induvidual_review.ipynb
+++ b/_notebooks/2023-10-29-Student_Blog_Induvidual_review.ipynb
@@ -12,6 +12,7 @@
     "description:\n",
     "type: tangibles \n",
     "courses: { compsci: {week: 11} }\n",
+    "image: images/jhj.jpeg\n",
     "---"
    ]
   },
