--- a/_notebooks/2024-1-15-SASS_Student_Lesson.ipynb
+++ b/_notebooks/2024-1-15-SASS_Student_Lesson.ipynb
@@ -38,7 +38,7 @@
     "\n",
     "<h4>What is SASS?</h4>\n",
     "\n",
-    "SASS is a preprocessor scripting language that is interpreted or compiled into CSS. Any preprocessor language takes input data and converts it to an output that’s used as input by another program. In other words when you run a SASS code you are actually converting your code into CSS which is then sued by the browser. "
+    "SASS is a preprocessor scripting language that is interpreted or compiled into CSS. Any preprocessor language takes input data and converts it to an output that’s used as input by another program. In other words when you run a SASS code you are actually converting your code into CSS which is then used by the browser. "
    ]
   },
   {
@@ -129,7 +129,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h4>Benifits of SASS over CSS</h4>\n",
+    "<h2>Benifits of SASS over CSS</h2>\n",
     "\n",
     "1. Improved Code Organization\n",
     "\n",
@@ -159,7 +159,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h4>Nesting</h4>"
+    "<h2>Nesting</h2>"
    ]
   },
   {
@@ -215,7 +215,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3>Advanced SASS</h3>"
+    "<h2>Advanced SASS</h2>"
    ]
   },
   {
@@ -555,7 +555,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3>How does HTML code use SASS??</h3>"
+    "<h2>How does HTML code use SASS??</h2>"
    ]
   },
   {
