--- a/_notebooks/2024-1-15-SASS_Student_Lesson.ipynb
+++ b/_notebooks/2024-1-15-SASS_Student_Lesson.ipynb
@@ -36,7 +36,7 @@
    "source": [
     "<br>\n",
     "\n",
-    "<h4>What is SASS?</h4>\n",
+    "<h2>What is SASS?</h2>\n",
     "\n",
     "SASS is a preprocessor scripting language that is interpreted or compiled into CSS. Any preprocessor language takes input data and converts it to an output that’s used as input by another program. In other words when you run a SASS code you are actually converting your code into CSS which is then used by the browser. "
    ]
@@ -45,7 +45,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Understanding differences: CSS V/S SASS**\n",
+    "<h2>Understanding differences: CSS V/S SASS</h2>\n",
     "\n",
     "- CSS: Cascading style sheets or CSS is the standard styling language for the web which provides a simple and direct syntax for styling HTML elements.\n",
     "\n",
@@ -439,7 +439,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h4>SASS Functions</h4>"
+    "<h2>SASS Functions</h2>"
    ]
   },
   {
