--- a/_notebooks/2024-1-15-SASS_Student_Lesson.ipynb
+++ b/_notebooks/2024-1-15-SASS_Student_Lesson.ipynb
@@ -673,18 +673,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <font color = \"Green\">Extra Credit Opportunity</font> \n",
+    "### <font color = \"Green\">Pop Corn Hack: 4</font> \n",
     "\n",
     "1. Using the steps above, create am SCSS file with SASS code for a simple button, convert the file to a .css and link it into a new HTML file. The final output needs to be a button with a color of your choice.\n",
     "\n",
     "<mark>// Your code here</mark>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Send the 3 popcorn hacks and the extra credit question to Sri Vaidyanthan S by this Friday"
    ]
   }
  ],
