--- a/_notebooks/2023-09-19-Recipe_Book_Manager.ipynb
+++ b/_notebooks/2023-09-19-Recipe_Book_Manager.ipynb
@@ -12,6 +12,7 @@
     "description: This is a recipe book manager \n",
     "type: hacks \n",
     "courses: { compsci: {week: 5} }\n",
+    "image: images/oiuh.jpeg\n",
     "---"
    ]
   },
