--- a/_notebooks/2023-10-09-boolean-if.ipynb
+++ b/_notebooks/2023-10-09-boolean-if.ipynb
@@ -12,6 +12,7 @@
     "description: Team LEIA\n",
     "type: tangibles\n",
     "courses: { compsci: {week: 8} }\n",
+    "iamge: images/gn.jpeg\n",
     "---"
    ]
   },
