--- a/_notebooks/2023-10-12-lists-and-search.ipynb
+++ b/_notebooks/2023-10-12-lists-and-search.ipynb
@@ -13,6 +13,7 @@
     "description: \n",
     "type: tangibles\n",
     "courses: { compsci: {week: 9} }\n",
+    "image: images/EWUF.png\n",
     "---"
    ]
   },
