--- a/_notebooks/2023-10-13-API-Testing.ipynb
+++ b/_notebooks/2023-10-13-API-Testing.ipynb
@@ -12,6 +12,7 @@
     "description: \n",
     "type: hacks\n",
     "courses: { compsci: {week: 9} }\n",
+    "image: images/bd.avif\n",
     "---"
    ]
   },
