--- a/_notebooks/2023-10-13-Lesson-Devoloping-Algortithims.ipynb
+++ b/_notebooks/2023-10-13-Lesson-Devoloping-Algortithims.ipynb
@@ -11,6 +11,7 @@
     "title: Developing Algorithms\n",
     "type: tangibles\n",
     "courses: { compsci: {week: 9} }\n",
+    "image: images/gc.jpeg\n",
     "---"
    ]
   },
