--- a/_notebooks/2023-10-16-js_object_oriented_programming.ipynb
+++ b/_notebooks/2023-10-16-js_object_oriented_programming.ipynb
@@ -11,6 +11,7 @@
     "description: Tech talk going over object oriented progamming in javascript\n",
     "type: ccc\n",
     "courses: { compsci: {week: 9} }\n",
+    "image: images/ggj.png\n",
     "---"
    ]
   },
