--- a/_notebooks/2023-10-2-STUDENTTEACHALGOR.ipynb
+++ b/_notebooks/2023-10-2-STUDENTTEACHALGOR.ipynb
@@ -12,6 +12,7 @@
     "description: Team SRSC \n",
     "type: hacks \n",
     "courses: { compsci: {week: 7} }\n",
+    "image: images/fjgn.jpeg\n",
     "---"
    ]
   },
