--- a/_notebooks/2023-10-24-developing-procedures.ipynb
+++ b/_notebooks/2023-10-24-developing-procedures.ipynb
@@ -12,6 +12,7 @@
     "comments: true\n",
     "type: hacks\n",
     "courses: { compsci: {week: 10} }\n",
+    "image: images/ccn.jpeg\n",
     "---"
    ]
   },
