--- a/_notebooks/2023-10-26-Python-Libraries.ipynb
+++ b/_notebooks/2023-10-26-Python-Libraries.ipynb
@@ -12,7 +12,8 @@
     "description: To teach the class how to use public Python libraries around the internet\n",
     "type: tangibles \n",
     "courses: { compsci: {week: 10} }\n",
-    "---"
+    "image: images/gh.png\n",
+    "---\n"
    ]
   },
   {
