--- a/_posts/2023-09-19-Week_5_Plans.md
+++ b/_posts/2023-09-19-Week_5_Plans.md
@@ -6,6 +6,7 @@ title: Week 5 Plans
 description: These are the plans for week 5 with uses the utterence bot
 type: plans
 courses: { compsci: {week: 5} }
+image: images/plan-dice-760.jpg
 ---
 
 
