--- a/_notebooks/2023-09-21-1.1-1.4_Team_Tesst.ipynb
+++ b/_notebooks/2023-09-21-1.1-1.4_Team_Tesst.ipynb
@@ -12,6 +12,7 @@
     "description: \n",
     "type: tangibles \n",
     "courses: { compsci: {week: 5} }\n",
+    "image: images/ddds.webp\n",
     "---"
    ]
   },
