--- a/_notebooks/2023-10-03-HomeworkProblems.ipynb
+++ b/_notebooks/2023-10-03-HomeworkProblems.ipynb
@@ -12,6 +12,7 @@
     "description: \n",
     "type: tangibles \n",
     "courses: { compsci: {week: 7} }\n",
+    "image: images/djkgfb.jpeg\n",
     "---\n"
    ]
   },
