--- a/_notebooks/2023-10-09-IterationLesson.ipynb
+++ b/_notebooks/2023-10-09-IterationLesson.ipynb
@@ -12,6 +12,7 @@
     "description: \n",
     "type: tangibles\n",
     "courses: { compsci: {week: 8} }\n",
+    "image: images/ksdj.webp\n",
     "---"
    ]
   },
