--- a/_notebooks/2023-10-13-EdamamaAPI.ipynb
+++ b/_notebooks/2023-10-13-EdamamaAPI.ipynb
@@ -11,6 +11,7 @@
     "title: Edamam Api\n",
     "type: tangibles\n",
     "courses: { compsci: {week: 8} }\n",
+    "image: images/bd.avif\n",
     "---"
    ]
   },
