--- a/_notebooks/2023-09-05-Movie_Search_Box.ipynb
+++ b/_notebooks/2023-09-05-Movie_Search_Box.ipynb
@@ -13,6 +13,7 @@
     "description: This search box uses JavaScript API so extract details from The Movie Database using an API created at that website. It then formats it to produce 8 major details, the name, the movie/series's poster, overview, rating, release date, genre, Mpaa rating aswell as using the input from the dynamic script and using it to search for trailers about the movie across youtube. Most of the code was done using the air of helpful tools such as my family, friends and chat, but I've done the code of the CSS formatting, genre and Mpaa maping. \n",
     "type: hacks\n",
     "courses: { compsci: {week: 3} }\n",
+    "image: images/djfhg.avif\n",
     "---"
    ]
   },
