--- a/_posts/2023-10-11-Test_Page.md
+++ b/_posts/2023-10-11-Test_Page.md
@@ -6,6 +6,7 @@ title: Test Site
 description: 
 type: hacks
 courses: { compsci: {week: 8} }
+image: images/dff.png
 ---
 
 <!-- HTML table fragment for page -->
