--- a/_notebooks/2024-1-15-SASS_Student_Lesson.ipynb
+++ b/_notebooks/2024-1-15-SASS_Student_Lesson.ipynb
@@ -9,7 +9,7 @@
     "comments: false\n",
     "layout: post\n",
     "title: Introduction to SASS\n",
-    "description: SASS Student Lesson\n",
+    "description: 5.1 SASS Student Lesson\n",
     "type: tangibles \n",
     "courses: { compsci: {week: 19} }\n",
     "image: images/1024px-Sass_Logo_Color.svg.png\n",
