--- a/_notebooks/2024-1-15-SASS_Student_Lesson.ipynb
+++ b/_notebooks/2024-1-15-SASS_Student_Lesson.ipynb
@@ -8,8 +8,8 @@
     "toc: true\n",
     "comments: false\n",
     "layout: post\n",
-    "title: Introduction to SASS\n",
-    "description: 5.1 SASS Student Lesson\n",
+    "title: 5.1 Introduction to SASS\n",
+    "description:  SASS Student Lesson\n",
     "type: tangibles \n",
     "courses: { compsci: {week: 19} }\n",
     "image: images/1024px-Sass_Logo_Color.svg.png\n",
