frontend and backend

--- a/_notebooks/2024-1-30-Frontback.ipynb
+++ b/_notebooks/2024-1-30-Frontback.ipynb
@@ -9,7 +9,7 @@
     "toc: true\n",
     "comments: false\n",
     "layout: post\n",
-    "title: Frontend and Backned Login Main Code\n",
+    "title: Frontend and Backend\n",
     "description:  \n",
     "type: hacks\n",
     "courses: { compsci: {week: 21} }\n",
